--- a/public/css/admin_custom.css
+++ b/public/css/admin_custom.css
@@ -1,16 +1,22 @@
-a.nav-link >  i {
-    width: 25px;
+body p {
+  padding: 0;
+  margin: 0;
 }
-
-.callout-top {
-    border-radius: .25rem;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24);
-    background-color: #fff;
-    border-top: 5px solid #e9ecef;
-    margin-bottom: 1rem;
-    padding: 1rem;
+body a.nav-link > i {
+  width: 25px;
 }
-
-.callout-top.callout-top-danger {
-    border-top-color: #007bff;
+body .text-truncate {
+  width: 250px;
 }
+body .callout-top {
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  background-color: #fff;
+  border-top: 5px solid #e9ecef;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+body .callout-top .callout-top-danger {
+  border-top-color: #007bff;
+}
+/*# sourceMappingURL=admin_custom.css.map */
